fix!: fix cors origin issues and update versions